--- a/style.css
+++ b/style.css
@@ -26,3 +26,15 @@ body {
 .nav-link {
   color: #e92569;
 }
+
+.navbar-brand {
+  font-family: "Playfair Display", serif;
+  color: #e92569 !important;
+  font-size: 20px;
+  margin-left: 50px;
+}
+
+.navbar {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
