--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
 .navbar {
   padding-top: 20px;
   padding-bottom: 20px;
+  background-color: #efefef !important;
 }
 
 .card {
@@ -53,4 +54,8 @@ main{
 main h1{
     font-family: 'Playfair Display', serif;
     color: #e92569 !important;
+}
+
+.navbar-nav > .active   {
+    background-color: white !important;
 }
