--- a/style.css
+++ b/style.css
@@ -1,61 +1,88 @@
 .tabs {
-  margin-left: 7rem;
-  margin-right: 7rem;
-  margin-top: 10rem;
-}
-.container h1 {
-  margin-top: 22px;
-  color: #e92569;
-}
+    margin-left: 7rem;
+    margin-right: 7rem;
+    margin-top: 10rem;
+  }
+  .container h1 {
+    margin-top: 22px;
+    color: #e92569;
+  }
+  
+  body {
+    background-color: #efefef;
+  }
+  
+  .btn {
+    background-color: #e92569;
+    color: white;
+    border: none;
+  }
 
-body {
-  background-color: #efefef;
-}
+  .card  .btn-primary {
+      padding-left: 40px;
+      padding-right: 40px;
+      margin-left: 60px;
+  }
 
-.btn {
-  background-color: #e92569;
-  color: white;
-  border: none;
-}
-.btn-toolbar{
-    margin
-}
-
-.btn:hover {
-  background-color: #e92569;
-  color: white;
-  border: none;
-}
-
-.nav-link {
-  color: #e92569;
-}
-
-.navbar-brand {
-  font-family: "Playfair Display", serif;
-  color: #e92569 !important;
-  font-size: 20px;
-  margin-left: 50px;
-}
-
-.navbar {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: #efefef !important;
-}
-
-.card {
-  margin: 50px;
-}
-
-main{
-    margin-left: 50px;
-}
-main h1{
-    font-family: 'Playfair Display', serif;
+  .btn-toolbar{
+      margin
+  }
+  
+  .btn:hover {
+    background-color: #e92569;
+    color: white;
+    border: none;
+  }
+  
+  .nav-link {
+    color: #e92569;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+  }
+  
+  .navbar-brand {
+    font-family: "Playfair Display", serif;
     color: #e92569 !important;
-}
+    font-size: 20px;
+    margin-left: 50px;
+  }
+  
+  .navbar {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: #efefef !important;
+  }
+  
+  .card {
+    /* margin: 50px; */
+    margin-top: 15px;
+  }
+  
+  main{
+      margin-left: 50px;
+      margin-top: 30px;
+  }
+  main h1{
+      font-family: 'Playfair Display', serif;
+      color: #e92569 !important;
+  }
+  
+  .active  {
+      background-color: white !important;
+  }
+  
+  footer{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: white;
+    margin-top: 40px;
+  }
 
-.navbar-nav > .active   {
-    background-color: white !important;
-}
+  .btn-primary2, .btn-primary3, .btn-primary4{
+      background-color: white;
+      color: #e92569;
+  }
+
+ 
