--- a/style.css
+++ b/style.css
@@ -1,109 +1,109 @@
 .tabs {
-    margin-left: 7rem;
-    margin-right: 7rem;
-    margin-top: 10rem;
-  }
-  .container h1 {
-    margin-top: 22px;
-    color: #e92569;
-  }
-  
-  body {
-    background: radial-gradient(#efefef, #E5E5E5);
-  }
-  
-  .btn {
-    background-color: #e92569;
-    color: white;
-    border: none;
-  }
+  margin-left: 7rem;
+  margin-right: 7rem;
+  margin-top: 10rem;
+}
+.container h1 {
+  margin-top: 22px;
+  color: #e92569;
+}
 
-  .card  .btn-primary {
-      padding-left: 40px;
-      padding-right: 40px;
-      margin-left: 60px;
-  }
+body {
+  background: radial-gradient(#efefef, #E5E5E5);
+}
 
-  .btn-toolbar{
-      margin
-  }
-  
-  .btn:hover {
-    background-color: #e92569;
-    color: white;
-    border: none;
-  }
-  
-  .nav-link {
-    color: #e92569;
-    font-family: 'Lato', sans-serif;
-    font-size: 16px;
-  }
-  
-  .navbar-brand {
-    font-family: "Playfair Display", serif;
-    color: #e92569 !important;
-    font-size: 20px;
+.btn {
+  background-color: #e92569;
+  color: white;
+  border: none;
+}
+
+.card  .btn-primary {
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-left: 60px;
+}
+
+.btn-toolbar{
+    margin
+}
+
+.btn:hover {
+  background-color: #e92569;
+  color: white;
+  border: none;
+}
+
+.nav-link {
+  color: #e92569;
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+}
+
+.navbar-brand {
+  font-family: "Playfair Display", serif;
+  color: #e92569 !important;
+  font-size: 20px;
+  margin-left: 50px;
+}
+
+.navbar {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #efefef !important;
+}
+
+.card {
+  /* margin: 50px; */
+  margin-top: 15px;
+}
+
+main{
     margin-left: 50px;
-  }
-  
-  .navbar {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: #efefef !important;
-  }
-  
-  .card {
-    /* margin: 50px; */
-    margin-top: 15px;
-  }
-  
-  main{
-      margin-left: 50px;
-      margin-top: 30px;
-  }
-  main h1{
-      font-family: 'Playfair Display', serif;
-      color: #e92569 !important;
-  }
-  
-  .active  {
-      background-color: white !important;
-  }
-  
-  footer{
-    display: flex;
-    justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 30px;
+}
+main h1{
+    font-family: 'Playfair Display', serif;
+    color: #e92569 !important;
+}
+
+.active  {
+    background-color: white !important;
+}
+
+footer{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+  margin-top: 40px;
+  font-family: 'Lato', sans-serif;
+  color: #767676;
+
+}
+
+.btn-primary2, .btn-primary3, .btn-primary4{
     background-color: white;
-    margin-top: 40px;
-    font-family: 'Lato', sans-serif;
-    color: #767676;
-
-  }
-
-  .btn-primary2, .btn-primary3, .btn-primary4{
-      background-color: white;
-      color: #e92569;
-  }
-
-  .card-img-top{
-    border-radius: 16px 16px 0px 0px
-  }
-  .card {
-    border-radius: 16px 16px 0px 0px
-  }
-
-  
-  .md-3 button:hover {
     color: #e92569;
-  }
+}
+
+.card-img-top{
+  border-radius: 16px 16px 0px 0px
+}
+.card {
+  border-radius: 16px 16px 0px 0px
+}
+
+
+.md-3 button:hover {
+  color: #e92569;
+}
 
 i{
-  color: #767676;
-  font-size: 34px;
-  margin-left: 15px;
+color: #767676;
+font-size: 34px;
+margin-left: 15px;
 }
 
 .fa-vimeo-v{
@@ -111,6 +111,25 @@ margin-left: 50px;
 }
 
 footer > div{
-  margin-right: 50px;
+margin-right: 50px;
 }
- 
+
+.form {
+background-color: #f1f1f1;
+}
+
+.align-center {
+vertical-align: middle;
+}
+
+@media (max-width: 575.98px) { 
+.reverse {
+  display: flex;
+  flex-flow: column-reverse;
+}    
+}
+
+.container {
+margin-bottom: 100px;
+}
+
