--- a/style.css
+++ b/style.css
@@ -71,17 +71,6 @@ main h1{
     background-color: white !important;
 }
 
-footer{
-  display: flex;
-  justify-content: space-between;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: white;
-  margin-top: 40px;
-  font-family: 'Lato', sans-serif;
-  color: #767676;
-
-}
 
 .btn-primary2, .btn-primary3, .btn-primary4{
     background-color: white;
@@ -110,8 +99,29 @@ margin-left: 15px;
 margin-left: 50px;
 }
 
+.share{
+  font-size: 20px;
+  color: black;
+}
+
+.card-body > .fa-facebook-f, .fa-twitter{
+  color: black;
+}
+
 footer > div{
 margin-right: 50px;
+}
+
+footer{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: white;
+  margin-top: 40px;
+  font-family: 'Lato', sans-serif;
+  color: #767676;
+
 }
 
 .form {
@@ -132,4 +142,3 @@ vertical-align: middle;
 .container {
 margin-bottom: 100px;
 }
-
