--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import "/_variables.css";
+
 .tabs {
   margin-left: 7rem;
   margin-right: 7rem;
@@ -5,27 +7,23 @@
 }
 .container h1 {
   margin-top: 22px;
-  color: #e92569;
+  color: var(--primary-colour);
 }
 
 body {
-  background: radial-gradient(#efefef, #E5E5E5);
+  background: radial-gradient(#efefef, #e5e5e5);
 }
 
 .btn {
-  background-color: #e92569;
+  background-color: var(--primary-colour);
   color: white;
   border: none;
 }
 
-.card  .btn-primary {
-    padding-left: 40px;
-    padding-right: 40px;
-    margin-left: 60px;
-}
-
-.btn-toolbar{
-    margin
+.card .btn-primary {
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-left: 60px;
 }
 
 .btn:hover {
@@ -36,7 +34,7 @@ body {
 
 .nav-link {
   color: #e92569;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 16px;
 }
 
@@ -58,87 +56,87 @@ body {
   margin-top: 15px;
 }
 
-main{
-    margin-left: 50px;
-    margin-top: 30px;
+main {
+  margin-left: 50px;
+  margin-top: 30px;
 }
-main h1{
-    font-family: 'Playfair Display', serif;
-    color: #e92569 !important;
-}
-
-.active  {
-    background-color: white !important;
+main h1 {
+  font-family: "Playfair Display", serif;
+  color: #e92569 !important;
 }
 
-
-.btn-primary2, .btn-primary3, .btn-primary4{
-    background-color: white;
-    color: #e92569;
+.active {
+  background-color: white !important;
 }
 
-.card-img-top{
-  border-radius: 16px 16px 0px 0px
+.btn-primary2,
+.btn-primary3,
+.btn-primary4 {
+  background-color: white;
+  color: #e92569;
+}
+
+.card-img-top {
+  border-radius: 16px 16px 0px 0px;
 }
 .card {
-  border-radius: 16px 16px 0px 0px
+  border-radius: 16px 16px 0px 0px;
 }
-
 
 .md-3 button:hover {
   color: #e92569;
 }
 
-i{
-color: #767676;
-font-size: 34px;
-margin-left: 15px;
+i {
+  color: #767676;
+  font-size: 34px;
+  margin-left: 15px;
 }
 
-.fa-vimeo-v{
-margin-left: 50px;
+.fa-vimeo-v {
+  margin-left: 50px;
 }
 
-.share{
+.share {
   font-size: 20px;
   color: black;
 }
 
-.card-body > .fa-facebook-f, .fa-twitter{
+.card-body > .fa-facebook-f,
+.fa-twitter {
   color: black;
 }
 
-footer > div{
-margin-right: 50px;
+footer > div {
+  margin-right: 50px;
 }
 
-footer{
+footer {
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: white;
   margin-top: 40px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #767676;
-
 }
 
 .form {
-background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 .align-center {
-vertical-align: middle;
+  vertical-align: middle;
 }
 
-@media (max-width: 575.98px) { 
-.reverse {
-  display: flex;
-  flex-flow: column-reverse;
-}    
+@media (max-width: 575.98px) {
+  .reverse {
+    display: flex;
+    flex-flow: column-reverse;
+  }
 }
 
 .container {
-margin-bottom: 100px;
+  margin-bottom: 100px;
 }
